# scisum_projet2

./: .gitignore  README.md  activate.sh  download_files.sh  pyproject.toml  run.sh
data/: hal_summaries.csv
docs/source/: conf.py
docs/source/references/: dataloader.rst  tokenizer.rst
scisum/: config.py
scisum/application/: app.py
scisum/application/dashboards/: intro.py  summarization.py  tags.py  title_generation.py  translation.py
scisum/application/utils/: data_loader.py  display.py  utils.py
scisum/domain/: model.py  postprocessing.py  tokenizer.py  translate.py
scisum/infrastructure/: dataloader.py  file_downloader.py  news_parser.py  utils.py
tests/: test_scisum.py
