[tool.poetry]
name = "scisum"
version = "0.1.0"
description = ""
authors = ["Antoine Meilliez <meilliez.antoine@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.9"
pandas = "^1.1.4"
numpy = "^1.16.4"
streamlit = "^0.72.0"
transformers = "^4.0.0"
spacy = "^2.3.4"
scikit-learn = "^0.23.2"
rouge = "^1.0.0"
torch = "^1.7.0"
simpletransformers = "^0.51.3"
Sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
beautifulsoup4 = "^4.9.3"
Unidecode = "^1.1.1"


[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
